--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -40,11 +40,17 @@ A rich literature tackles the many dimensions of these questions.
 
 One major outcome of this body of science is the various compiled databases of species distribution maps. Two global-scale repositories predict marine species ranges throughout the world's oceans – AquaMaps (Kaschner et al. 2013) and International Union for Conservation of Nature (IUCN) (REF).  These two spatial datasets have been used for a wide range of purposes, including assessing marine species status (Halpern et al. 2012, 2015 _both_; Selig et al. 2013 _both_), evaluating global biodiversity patterns (Coll et al. 2010 _AM_; Martin et al. 2014 _both and others_, Pimm 2014 _IUCN, mostly focusing on terrestrial but some marine_), predicting range shifts (Molinos et al. 2015 _AquaMaps_, and setting conservation priorities (Klein et al. 2015 _AquaMaps_). <!-- BSH: Any of these use IUCN?  Would be good to make sure at least 2-3 examples were based on IUCN. ___none of these exclusively use IUCN - other suggestions?___-->
 
+___BSH:___ _I think Julie makes this comment below, but we may need to be able to substantiate this somehow.  Is there a way to quickly figure out how many studies have used AM vs. IUCN?_  
+
+___CCO:___ _What about age - AquaMaps is pretty recent (2006 at earliest); before that, would IUCN have been the dominant dataset for marine?  Maybe we can track citations of AquaMaps, but citations of IUCN are generic - just cite the Red List - not referencing spatial information specifically, much less marine.  Going by citation year field on the maps themselves, the oldest marine record I can find is 2004._
+
+_Four foundational papers relating to AquaMaps (Kaschner et al. 2006, 2011; 2013; Ready et al. 2010) have been cited a total of 379 times._
+
 The two datasets ostensibly describe the same information, but significant differences in methodology and intent could lead to dramatically different understandings of our marine ecosystems, with significant implications for policy and conservation recommendations.  Importantly, biases in taxonomic or spatial coverage within a dataset could shift management and conservation actions away from places or species that are most in need.  Inaccurate indications of presence or absence could lead to ineffective marine reserve systems and management plans (Rondinini et al. 2006) (Jetz 2008?).
 
-To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and outline possible improvements. <!--BSH: I think Jamie makes this comment below, but we may need to be able to substantiate this somehow.  Is there a way to quickly figure out how many studies have used AM vs. IUCN?  CCO: What about age - AquaMaps is pretty recent; before that, would IUCN have been the dominant dataset for marine?  Maybe we can track citations of AquaMaps, but citations of IUCN I think are generic - just cite the Red List - not referencing spatial information specifically, much less marine.-->
+To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of species.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique species).  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align, determine several issues that lead to misalignment between predicted species distributions, and outline possible improvements. 
 
-We then subject two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (Halpern et al. 2012, 2015) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (Klein et al. 2015) - to a sensitivity analysis. ... ___substituting___ one dataset over the other, to highlight the possible consequences of different data use decisions on our understanding of _the status of_ marine biodiversity. ___BSH suggestion: We used all unique species range data from both sources but substituted one dataset over the other for shared species to highlight the possible consequences of different data use decisions on our understanding of the status of and protection of marine biodiversity.___
+We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (Halpern et al. 2012, 2015) and a global analysis of gaps in protection afforded by marine protected areas (MPAs) (Klein et al. 2015) - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight the possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.
 
 -----
 
@@ -54,7 +60,7 @@ We then subject two recent marine biodiversity studies - an assessment of the st
 
 The IUCN publishes species range maps, bundled by taxonomic groups (REF), based on expert input on spatial boundaries of a given species' "limits of distribution" (REF IUCN 2014) - essentially a refined extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  In contrast, AquaMaps models species distribution based environmental preferences (e.g. temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of probability of occurrence for each species (AquaMaps 2013)
 
-The methodologies behind these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps generally include large commission errors, while predicted distribution models such as AquaMaps will likely include fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals (Rondinini, 2006). 
+The methodologies behind these datasets imply differences in prediction of species distribution due to errors of commission (falsely _(erroneously? less accusatory, but an annoying word)_ indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps generally include large commission errors, while predicted distribution models such as AquaMaps will likely include fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range <!-- from Rondinini: Omission errors lead to identifying networks of areas for conservation action that are smaller than required and centred on known species occurrences, thus affecting the comprehensiveness, representativeness and efficiency of selected areas. Commission errors lead to selecting areas not relevant to conservation, thus affecting the representativeness and adequacy of reserve network --> (Rondinini, 2006). 
 <!-- This study basically predicted some of the problems we’re seeing here and predicts implications; I’d like to meaningfully acknowledge it, but not sure how deeply to get into it.  Later comments ask about whether to include the omission/commission terminology. 
 
 BSH: I haven’t read the paper, but it sounds like we need to acknowledge what was already discussed/done there.  This may actually simplify things, such that we condense the first three paragraphs of this section into a single paragraph that restates what that paper found (and cite it) and add anything else we want to point out.  But we will definitely need a succinct statement about how our paper moves well beyond what that paper did. Not sure best approach without reading the paper.-->
@@ -93,65 +99,48 @@ dp_med_occ_q123 <- quad_count_means$med_occ_total[1]
 
 To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (where on the map) against the ratio of extent (how much of the map) for each shared species (Fig. 2A). 
 
-The negative linear relationship <!--BSH: Any stats for this? If so, insert just after this phrase. Otherwise maybe phrase it as 'The general pattern that emerges of a negative linear relationship, where increasing similarity...'--> indicates that increasing similarity in extent correlates with decreasing distribution alignment. <!--BSH: Could also be said as increasing similarity in alignment leads to decreasing similarity in extent.  The phrasing implies causality, even though you are careful to use ‘correlates’--> AquaMaps tends to extrapolate species ranges beyond known occurrences, such that the marginal range predicted by AquaMaps will fall in different locations than the marginal range predicted using IUCN methodology. For species with dissimilar extents, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar extents, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
+A general negative linear pattern emerges, <!--BSH: Any stats for this? If so, insert just after this phrase. Otherwise maybe phrase it as 'The general pattern that emerges of a negative linear relationship, where increasing similarity...'--> suggesting that increasing similarity in extent correlates with decreasing distribution alignment. <!--BSH: Could also be said as increasing similarity in alignment leads to decreasing similarity in extent.  The phrasing implies causality, even though you are careful to use ‘correlates’--> AquaMaps tends to extrapolate species ranges beyond known occurrences, such that the marginal range predicted by AquaMaps will fall in different locations than the marginal range predicted using IUCN methodology. For species with dissimilar extents, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar extents, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
-Dividing the map-paired species into quadrants highlights different categories of relationships that in turn help further explain the general pattern. The upper right quadrant includes species (n = `r n_q1`) whose described ranges agree in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because they exist nearly everywhere.
+By dividing the map-paired species into quadrants, we highlight different categories of relationships that in turn help further explain the general pattern. The upper right quadrant includes species (n = `r n_q1`) whose described ranges agree in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because they exist nearly everywhere.
 
-The extent-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission. <!-- BSH: Worth a few spot checks to confirm this is more or less true. And then maybe include 2-3 examples as figures in the SOM and refer to them here.-->
-Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps. _BSH: Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches._ <!--BSH: This is kinda redundant, just emphasizing a solution to the problem.  Not sure it's needed, or perhaps could be woven in to previous sentence.-->
+The extent-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission. <!-- BSH: maybe include 2-3 examples as figures in the SOM and refer to them here.-->
+Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
 
 Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar extents are meaningless when the distributions are poorly aligned.
 
-<!--The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match.  Often these mismatches arise when AquaMaps relies on limited data to predict species presence well beyond known occurrences.  Indeed, `r p_q4_datapoor`% (n = `r n_q4_datapoor`) of these cases are data-poor (in which the AquaMaps environmental envelope model is based on fewer than 10 known cell occurrences), compared with `r p_q123_datapoor`% for species in the other three quadrants.  Only `r p_q4_rev`% (n = `r n_q4_rev`) of AquaMaps maps in this quadrant have undergone expert review, compared with `r p_q123_rev`% of species in the other three quadrants. <!--BSH: This implies the problem is solely with AM.  Are there no issues with IUCN maps that cause problems in this quadrant?--> <!--___The data-poor condition likely applies to IUCN as well - AM using OBIS points to generate models, and IUCN is probably doing the same.  Check, and rework.  This means AM is creating errors of commission, while IUCN may be committing errors of omission for poorly-studied species and/or regions - compounding the total problem.___-->
-
-The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (summing (averaging?) OBIS and GBIF occurrences) for this quadrant is `r dp_med_am_q4`, compared to a median of `r dp_med_am_q123` for species in the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
+The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor extent match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (summing (averaging?) OBIS and GBIF occurrences) for this quadrant is `r dp_med_am_q4`, compared to a median of `r dp_med_am_q123` for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
 
 -----
 
 # Implications
 
-_brief intro to implications - where/how long have IUCN/AquaMaps been used for various purposes; then introduce two case studies_
-
-* ___From JSL:___ _I think you need a broader discussion of implications. How many times has IUCN/Aquamaps been cited? How long have they been around? What scales are the studies? Then you can muse about how results/interpretations would be different depending on which dataset they used, and reference Fig 3’s._
-* _Then, say for example, the OHI uses these datasets together (don’t need to get too much into OHI background I think, maybe they don’t even need to know about the biodiversity goal?), but say that to try to combine them they use a threshold at 40% since others use this threshold (but check out the SOM for analyses about thresholds)_
-
-<!--BSH: I think the first bullet point can/should go in the Intro (very briefly!) - I've noted where in my comments to that section. I do agree there needs to be a tiny bit of explanation of how OHI uses the two datasets.-->
+Clear and significant differences in species range descriptions between AquaMaps and IUCN range maps, due to method-driven differences in errors of commission and omission.  To examine the implications of these differences, we replicated two recent studies, varying only the prioritization of one data set over the other.
 
 **Case Study: The Ocean Health Index** <!--BSH: I stopped editing and worksmithing here and just focused on addressing your comments/questions from here on-->
 
-The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distributions from both IUCN and AquaMaps datasets, prioritizing IUCN data for the subset of species in both sources.  OHI uses a probability threshold of 40% to determine species presence for AquaMaps data.
+The global Ocean Health Index (OHI) (Halpern et al. 2012, 2015), a composite index comprising ten sustainable benefits provided by a healthy ocean, uses species spatial distribution data and IUCN Red List conservation status to calculate biodiversity status (scored from zero to 100) for each of the world's 221 exclusive economic zones. To maximize the number of represented species, OHI gleans spatial distributions from both IUCN and AquaMaps datasets, prioritizing IUCN data for the `r n_spp_both` species included in both sources.  OHI currently uses a probability threshold of 40% to determine species presence for AquaMaps data. 
 
-We recalculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Most country scores varied by fewer than five points across the three scenarios; a few country scores decreased by as many as 12 points, indicating a more dire assessment of species conservation status.
-
-_Since the Ocean Health Index Species subgoal relies on spatial data from both datasets, the impacts of these threshold and preference changes will be somewhat muted.  When IUCN range maps are the preferred data source, only the subset of AquaMaps-only species will be affected by threshold changes; and when AquaMaps is the preferred source, the IUCN-only species will dampen the effect of a threshold change._ <!--CCO: This seems overly specific and I think could probably be cut, but the score changes weren’t earth-shattering – and that’s because we are buffering it by using both datasets
-BSH: I would maybe reframe this as 'given that only 2166 species overlap, score changes are not likely to be large for OHI and yet we still see important differences . . . " (remember that at the global scale, 2-3 points is a big deal)-->
+We recalculated the OHI species status score under several scenarios to observe the impact of toggling the prioritized data set from IUCN to AquaMaps, and toggling the AquaMaps presence threshold from 40% to 0% (<a href = '#fig3'>Fig. 3</a>).  Given that only `r n_spp_both` species overlap out of `r n_spp_all`, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in such large score shifts as seen in scenarios 2 and 3.  While many country scores showed only small variation across all three scenarios, select countries gained as many as 5 points while others dropped up to 12 points.  Significantly, the global score decreased by two full points in scenario 3, indicating that an arbitrary change in how the two datasets are combined results in a more dire assessment of species conservation status. 
 
 -----  
 
 **Case Study: MPA Gap Analysis**
 
-Klein et al. (2015) compared the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species and to identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  The study determined that currently defined marine protected areas (IUCN categories I through IV overlapping with marine areas) are woefully inadequate in protecting marine biodiversity; 90.5% of species have less than 5% of their overall range represented within marine protected areas.
+Klein et al. (2015) compared the global distribution of species to the global distribution of marine protected areas to assess how well the MPAs protect key species and to identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  The study determined that currently established MPAs (IUCN categories I through IV overlapping with marine areas) are woefully inadequate in protecting marine biodiversity; 90.5% of species have less than 5% of their overall range represented within MPAs and 1.4% of species have no protection at all ("gap" species).
 
-___working on the analysis...___
-
-_Predictions: What happens when using a 0% threshold instead of a 50%? What happens when using IUCN rather than AM?_
-* _IUCN tends to overestimate extent esp for coastal species?  How much of this area will fall within MPAs and how much will fall outside, proportionally? this affects protection ratio._
-* _More area means more species (relatively) will be at least partially included in MPAs so fewer apparent gap species?_
-* _Policy implications?  Can also tie this back to the predictions of Rondinini et al re: effects of commission/omission errors_
-
-
+ (<a href = '#fig4'>Figure 4</a>) displays the results of applying this methodology under several different scenarios.  When comparing the conclusions based upon an IUCN-only scenario to an AquaMaps-only scenario (using 2015 data and a 0% threshold sets the most meaningful comparison) we found a five-fold increase in the proportion of gap species (6.4% vs 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network.
 
 -----
 
 # Conclusions
 
-What can be done to address the differences between these two important marine species distribution datasets?  We have identified several potential causes of commission errors among these datasets.  Understanding these causes points toward a few improvements that may help us better align the predictions of species distributions, increasing their utility for ecology research and conservation actions.
+AquaMaps and IUCN range maps provide important spatial information on marine species ranges, and show reasonable agreement for many well-studied species, but illustrate uncertainty in our understanding of spatial distribution for many others.  Identifying and addressing differences in these datasets will increase their utility for ecology research and conservation actions.  We have identified several likely drivers of commission errors and omission errors between these datasets, pointing toward improvements to better align the predictions of species distributions. 
 
 __Suggestions for data providers:__
 
 * The IUCN Red List instructional materials for mapping marine species suggest that "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species" (REF https://www.conservationtraining.org/mod/scorm/player.php?a=1412&currentorg=M5L1_ORG&scoid=6492).  Unfortunately, this recommendation appears to be applied inconsistently.  Especially for demersal communities dependent on photosynthesis, bathymetry should be a primary consideration; even a simple cutoff at the photosynthetic limit of 200 meters would minimize a likely source of commission errors.
 * The AquaMaps model is a powerful tool for quickly estimating species distribution based on limited information; however, the model's output is only as good as the input data, which for marine species is often sorely limited.  AquaMaps encourages experts to review and comment on the predicted species distribution maps; lessons from the small sample of reviewed maps can be generalized, for example to other species in the same taxonomic group, to further refine the predictions.  This is especially important for data-poor species.
-* In addition to environmental preferences and conditions, AquaMaps mapping parameters include area restrictions to help limit over-extrapolation of AquaMaps models.  Currently the area restrictions are denoted by FAO Major Fishing Areas (REF find a reference in AquaMaps somewhere); however, allowing area restrictions based on biogeographical criteria, e.g. Marine Ecoregions of the World (REF), would likely have better resolution and predictive power, especially for data-poor species.
+* In addition to environmental preferences and conditions, AquaMaps mapping parameters include area restrictions to help limit over-extrapolation of AquaMaps models.  Currently the area restrictions are denoted by FAO Major Fishing Areas (REF find a reference in AquaMaps somewhere); however, area restrictions based on biogeographical criteria, e.g. Marine Ecoregions of the World (REF), would likely provide better resolution and predictive power, especially for data-poor species.
 
 __Suggestions for data users:__
 
@@ -160,7 +149,4 @@ __Suggestions for data users:__
     * An AquaMaps presence threshold of 0% most closely approximates the "limits of distribution" defined by IUCN range maps.
     * Additional filters on AquaMaps distribution criteria, such as expert review status or the number of occurrence cells used to generate the species model, can help avoid overextrapolation for data poor species.
     
-Conclusions:
-combine datasets for increased number of species; identify data-poor species to improve confidence in range estimates
-differences in methodology create significant differences in results; errors of both commission and omission
-importance to conservation management - different types of errors have different implications
+_(do we need a wrap-it-up paragraph here?  I put that more at the top of the conclusions section... could shift it down here, but probably not needed in both places)_
