--- a/mpa_analysis/3_mpa_spp_analysis.Rmd
+++ b/mpa_analysis/3_mpa_spp_analysis.Rmd
@@ -454,5 +454,15 @@ mpa_all_runs_wide <- mpa_all_runs1 %>%
 names(mpa_all_runs_wide)[4:7] <- paste('covered', names(mpa_all_runs_wide)[4:7], sep = ' ')
 mpa_all_runs_wide <- mpa_all_runs_wide[rev(mpa_all_runs_wide$Scenario), ]
 
+knitr::kable(mpa_all_runs_wide)
+
 write_csv(mpa_all_runs_wide, file.path(dir_data, 'mpa_all_runs_summary.csv'))
 ```
+
+|Scenario               |     n|gap  |covered 0-2% |covered 2-5% |covered 5-10% |covered >10% |
+|:----------------------|-----:|:----|:------------|:------------|:-------------|:------------|
+|am2014 (50%)           | 17344|1.6% |44.6%        |44.6%        |6.8%          |2.4%         |
+|am2015 (50%)           | 22885|1.7% |45.7%        |42.7%        |7.2%          |2.7%         |
+|am2015 (0%)            | 22889|1.2% |46.5%        |44.5%        |6.4%          |1.5%         |
+|am2015 (0%) + iucn2015 | 24634|2%   |48%          |42.2%        |6.2%          |1.6%         |
+|iucn2015               |  4024|6.4% |66.8%        |20.1%        |3.8%          |2.9%         |
